src/objects/Relationship__c.object
<CustomObject>
    <description>This junction object links Client with Partner Accounts, Partner Accounts with Client Opportunities, Client Accounts with Competitor Accounts, and Competitor Accounts with Client Opportunities.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(
 AND( 
  TODAY() &gt;= Start_Date__c, 
  OR(
   TODAY() &lt;= End_Date__c, 
   ISBLANK(End_Date__c)
  ),
  OR(
   !ISBLANK( Partner_Oppty_Partnership__c ),   
   !ISBLANK( Partner_Partnership__c ),
   !ISBLANK( Partner_Contract_Partnership__c )
  )
 ),
 TRUE,
 FALSE
)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Link__c</fullName>
        <description>Link of the Box folder where the file is located</description>
        <inlineHelpText>Link of the Box folder where the file is located</inlineHelpText>
        <label>Box Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Client Account for linking to a Competitor Account.</description>
        <inlineHelpText>Lookup to Client Account for linking to a Competitor Account.</inlineHelpText>
        <label>Client Account (C)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client-Level Competition</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Client Account for linking to a Partner Account.</description>
        <inlineHelpText>Lookup to a Client Account for linking to a Partner Account.</inlineHelpText>
        <label>Client Account (P)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client-Level Partnerships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CohortOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links a Client Lite Account that is a part of a Cohort with a Partner&apos;s Cohort Opportunity</description>
        <inlineHelpText>Links a Client Lite Account that is a part of a Cohort with a Partner&apos;s Cohort Opportunity</inlineHelpText>
        <label>Cohort Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cohort Clients</relationshipLabel>
        <relationshipName>CohortClients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competing_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the product with which the Competitor Account is competing</description>
        <inlineHelpText>Defines the product with which the Competitor Account is competing</inlineHelpText>
        <label>Competing Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Competing Products</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Competitor Account for linking to a Client Account.</description>
        <inlineHelpText>Lookup to Competitor Account for linking to a Client Account.</inlineHelpText>
        <label>Competitor Account (A)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client-Level Competition (Competitor)</relationshipLabel>
        <relationshipName>Relationships2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Oppty_Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Competitor Account for linking to an Opportunity.</description>
        <inlineHelpText>Lookup to Competitor Account for linking to an Opportunity.</inlineHelpText>
        <label>Competitor Account (O)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity-Level Competition (Competitor)</relationshipLabel>
        <relationshipName>Relationships3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Contract in a relationship between a deal and Partner.</description>
        <inlineHelpText>The related Contract in a relationship between a deal and Partner.</inlineHelpText>
        <label>Contract (P)</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract-Level Partnerships (Contract)</relationshipLabel>
        <relationshipName>ContractRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Grade__c</fullName>
        <description>Data Operations assigned grading based on quality of data received</description>
        <inlineHelpText>Data Operations assigned grading based on quality of data received</inlineHelpText>
        <label>Data Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
                <value>
                    <fullName>B-</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>C-</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>Type of medical or insurance information we’re receiving through this file</description>
        <inlineHelpText>Type of medical or insurance information we’re receiving through this file</inlineHelpText>
        <label>Data Types Included</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Info</fullName>
                </value>
                <value>
                    <fullName>Medical Claims</fullName>
                </value>
                <value>
                    <fullName>Pharmacy Claims</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Predefined List</fullName>
                </value>
                <value>
                    <fullName>Tags</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Frequency__c</fullName>
        <description>Frequency in which we are receiving the files</description>
        <inlineHelpText>Frequency in which we are receiving the files</inlineHelpText>
        <label>Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Irregular</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drivertized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this feed is drivertized</description>
        <inlineHelpText>Indicates if this feed is drivertized</inlineHelpText>
        <label>Drivertized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligibility_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this file is the main source of eligibility</description>
        <inlineHelpText>Indicates if this file is the main source of eligibility</inlineHelpText>
        <label>Eligibility Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Delivery_Address__c</fullName>
        <description>Email address or link associated with the file delivery</description>
        <inlineHelpText>Email address or link associated with the file delivery</inlineHelpText>
        <label>File Delivery Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Delivery_Method__c</fullName>
        <description>Method used to send the file to our systems</description>
        <inlineHelpText>Method used to send the file to our systems</inlineHelpText>
        <label>File Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SFTP - Livongo Hosted</fullName>
                </value>
                <value>
                    <fullName>SFTP - Client Hosted</fullName>
                </value>
                <value>
                    <fullName>Secure Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <description>Format in which we are receiving this file</description>
        <inlineHelpText>Format in which we are receiving this file</inlineHelpText>
        <label>File Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delimited</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Fixed Width</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Naming_Convention__c</fullName>
        <description>File name prefix being used when sending the file</description>
        <inlineHelpText>File name prefix being used when sending the file</inlineHelpText>
        <label>File Naming Convention</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Historical_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if we receive historical data for this feed</description>
        <inlineHelpText>Indicates if we receive historical data for this feed</inlineHelpText>
        <label>Historical Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to either a Partner or Competitor Account for linking to a Client Account.</description>
        <inlineHelpText>Lookup to either a Partner or Competitor Account for linking to a Client Account.</inlineHelpText>
        <label>Master Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Vendor Accounts</relationshipLabel>
        <relationshipName>PartnerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Client_Account_Name__c</fullName>
        <formula>Master_Client_Account__r.Name</formula>
        <label>Master Client Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Client_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Defines the master account for the Relates To record</description>
        <label>Master Client Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Master Client Accounts</relationshipLabel>
        <relationshipName>MasterAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the master contract for the Relates To record</description>
        <inlineHelpText>Defines the master contract for the Relates To record</inlineHelpText>
        <label>Master Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Master Contracts</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Defines the master opportunity for the Relates To record</description>
        <label>Master Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Master Opportunities</relationshipLabel>
        <relationshipName>Relates_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Multi_tenant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is part of a multitenant file</description>
        <inlineHelpText>Indicates if this is part of a multitenant file</inlineHelpText>
        <label>Multi-tenant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_CO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Cohorts Only!  Lookup to Opportunity for linking to a Client Lite that is a part of a Cohort related to this Opportunity.</description>
        <inlineHelpText>For Cohorts Only!  Lookup to Opportunity for linking to a Client Lite that is a part of a Cohort related to this Opportunity.</inlineHelpText>
        <label>Opportunity (Cohort)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity to Cohorts</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Competition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Opportunity for linking to a Competitor Account.</description>
        <inlineHelpText>Lookup to Opportunity for linking to a Competitor Account.</inlineHelpText>
        <label>Opportunity (C)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity-Level Competition (Opportunity)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Opportunity in a relationship between an Opportunity and Partner Account.</description>
        <inlineHelpText>The Opportunity in a relationship between an Opportunity and Partner Account.</inlineHelpText>
        <label>Opportunity (P)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity-Level Partnerships (Opportunity)</relationshipLabel>
        <relationshipName>PartnerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Text__c</fullName>
        <formula>Master_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contract_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Partner Account for linking a Partner Account to a Contract.</description>
        <inlineHelpText>Lookup to a Partner Account for linking a Partner Account to a Contract.</inlineHelpText>
        <label>Partner Account (C)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract-Level Partnership (Partner)</relationshipLabel>
        <relationshipName>Relationships4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Oppty_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to a Partner Account for linking a Partner Account to an Opportunity.</description>
        <inlineHelpText>Lookup to a Partner Account for linking a Partner Account to an Opportunity.</inlineHelpText>
        <label>Partner Account (O)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity-Level Partnership (Partner)</relationshipLabel>
        <relationshipName>PARTNERTOOPPORTUNITY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Partnership_Name__c</fullName>
        <formula>Partner_Partnership__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account (A) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Partnership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Partner or Employer Account in a relationship between a Client and Partner or Employer Account.</description>
        <inlineHelpText>The Partner or Employer Account in a relationship between a Client and Partner or Employer Account.</inlineHelpText>
        <label>Partner Account (A)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client-Level Partnerships (Partner)</relationshipLabel>
        <relationshipName>RelatedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this feed is in line with ROI standards</description>
        <inlineHelpText>Indicates if this feed is in line with ROI standards</inlineHelpText>
        <label>ROI Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RelationshipType__c</fullName>
        <description>Defines the type of relationship between two entities.</description>
        <inlineHelpText>Defines the type of relationship between two entities.</inlineHelpText>
        <label>Relationship Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Activity Tracking Devices</fullName>
                </value>
                <value>
                    <fullName>Associated Health Plan</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Benefits Consultant</fullName>
                </value>
                <value>
                    <fullName>Billing Partner</fullName>
                </value>
                <value>
                    <fullName>Biometrics Screening/Health  Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield Federal Employee Program</fullName>
                    <isActive>false</isActive>
                    <label>Blue Cross Blue Shield Federal Employee Program</label>
                </value>
                <value>
                    <fullName>Cardiovascular Health</fullName>
                </value>
                <value>
                    <fullName>Care Coordinator</fullName>
                </value>
                <value>
                    <fullName>Children&apos;s Health and Obesity</fullName>
                </value>
                <value>
                    <fullName>Cohort</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Concierge/Coaching Advocacy</fullName>
                </value>
                <value>
                    <fullName>Contract Path</fullName>
                </value>
                <value>
                    <fullName>Contract Terms</fullName>
                </value>
                <value>
                    <fullName>Cost Transparency</fullName>
                </value>
                <value>
                    <fullName>Data - Eligibility File</fullName>
                </value>
                <value>
                    <fullName>Data - Eligibility File - Historical</fullName>
                    <isActive>false</isActive>
                    <label>Data - Eligibility File - Historical</label>
                </value>
                <value>
                    <fullName>Data - Email</fullName>
                </value>
                <value>
                    <fullName>Data - Historical</fullName>
                    <isActive>false</isActive>
                    <label>Data - Historical</label>
                </value>
                <value>
                    <fullName>Data - Medical Claims</fullName>
                </value>
                <value>
                    <fullName>Data - N/A – No Livongo Marketing</fullName>
                </value>
                <value>
                    <fullName>Data - Other</fullName>
                </value>
                <value>
                    <fullName>Data - Pharmacy Claims</fullName>
                </value>
                <value>
                    <fullName>Data - Predefined List</fullName>
                    <isActive>false</isActive>
                    <label>Data - Predefined List</label>
                </value>
                <value>
                    <fullName>Data - Predefined List from Biometric</fullName>
                </value>
                <value>
                    <fullName>Data - Predefined List from EMR</fullName>
                </value>
                <value>
                    <fullName>Data - Predefined List from HRA</fullName>
                </value>
                <value>
                    <fullName>Data - Predefined List from Medical Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Notes__c</fullName>
        <description>add notes to account partner</description>
        <label>Relationship Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_Sort__c</fullName>
        <description>Allows for sorting &quot;key&quot; relationships to the top of related lists</description>
        <formula>IF( ISPICKVAL(RelationshipType__c, &quot;Contract Path&quot;), 1, 
IF( ISPICKVAL(RelationshipType__c, &quot;Billing Partner&quot;), 3, 
IF( ISPICKVAL(RelationshipType__c, &quot;Eligibility Partner&quot;), 2, 
4)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportRecipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Party to which reports may be sent.</description>
        <inlineHelpText>Party to which reports may be sent.</inlineHelpText>
        <label>Report Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Pursuing Client</fullName>
                </value>
                <value>
                    <fullName>Competitor Currently Engaged w/ Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used_for_Marketing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this file is being used for marketing</description>
        <inlineHelpText>Indicates if this file is being used for marketing</inlineHelpText>
        <label>Used for Marketing</label>
        <type>Checkbox</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>Account_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>RelationshipType__c</columns>
        <columns>Master_Client_Account__c</columns>
        <columns>Master_Account__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship__c.Account_Partnership</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>2 - Account Partnerships</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>RelationshipType__c</columns>
        <columns>Status__c</columns>
        <columns>Master_Client_Account__c</columns>
        <columns>Master_Account__c</columns>
        <columns>Master_Opportunity__c</columns>
        <columns>Master_Contract__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contract_Partnership__c</columns>
        <filterScope>Everything</filterScope>
        <label>1 - All Relationships</label>
    </listViews>
    <listViews>
        <fullName>Contract_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>RelationshipType__c</columns>
        <columns>Master_Client_Account__c</columns>
        <columns>Master_Account__c</columns>
        <columns>Master_Contract__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship__c.Contract_Partnership</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>3 - Contract Partnerships</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Eligibility_Partner</fullName>
        <columns>NAME</columns>
        <columns>Client_Competition__c</columns>
        <columns>RelationshipType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RelationshipType__c</field>
            <operation>equals</operation>
            <value>Eligibility Partner</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Contracts &gt; Eligibility Partner</label>
    </listViews>
    <listViews>
        <fullName>My_Relationships2</fullName>
        <columns>NAME</columns>
        <columns>Client_Competition__c</columns>
        <columns>Client_Partnership__c</columns>
        <columns>Master_Client_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Client_Account__c</field>
            <operation>contains</operation>
            <value>Steven</value>
        </filters>
        <label>My Relationships</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Partnerships</fullName>
        <columns>NAME</columns>
        <columns>RelationshipType__c</columns>
        <columns>Master_Client_Account__c</columns>
        <columns>Master_Account__c</columns>
        <columns>Master_Opportunity__c</columns>
        <columns>Active__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Relationship__c.Opportunity_Partnership</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>4 - Opportunity Partnerships</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Relationship Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>Account_Competition</fullName>
        <active>true</active>
        <description>Competitor at the Client Account level</description>
        <label>Account Competition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Partnership</fullName>
        <active>true</active>
        <description>Partner at the Client Account level (Health Plan/Payer, Benefits Consultant, PBM, Wellness Coordinator, or Cohort)</description>
        <label>Account Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_Partnership</fullName>
        <active>true</active>
        <description>Partner at the Contract level (Admin Party, Billing Partner, Care Coordinator, Contract Path, Contract Terms, or Data)</description>
        <label>Contract Partnership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Competition</fullName>
        <active>true</active>
        <description>Competitor at the Opportunity level</description>
        <label>Opportunity Competition</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Partnership</fullName>
        <active>true</active>
        <description>Partner at the Opportunity level (Lead Source or Influencer)</description>
        <label>Opportunity Partnership</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_CVS_Caremark</fullName>
        <active>true</active>
        <description>We noticed that you selected CVS Health or Caremark as the Billing Partner.  Please select Caremark TC or Caremark PSM instead.</description>
        <errorConditionFormula>( Partner_Contract_Partnership__r.Account_ID_Long__c =  $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c 
	|| Partner_Contract_Partnership__r.Account_ID_Long__c =  $CustomMetadata.Account_Long_ID__mdt.Caremark.Account_Long_ID__c )
	&amp;&amp;  ISPICKVAL( RelationshipType__c , &quot;Billing Partner&quot;)</errorConditionFormula>
        <errorMessage>We noticed that you selected CVS Health or Caremark as the Billing Partner.  Please select Caremark TC or Caremark PSM instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_CVS_Caremark</fullName>
        <active>true</active>
        <description>We noticed that you selected CVS Health or Caremark as the Contract Path.  Please select Caremark TC or Caremark PSM instead.</description>
        <errorConditionFormula>( Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark.Account_Long_ID__c )
&amp;&amp; ISPICKVAL( RelationshipType__c , &quot;Contract Path&quot;)</errorConditionFormula>
        <errorMessage>We noticed that you selected CVS Health or Caremark as the Contract Path.  Please select Caremark TC or Caremark PSM instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Influencer_CVS_Caremark</fullName>
        <active>true</active>
        <description>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</description>
        <errorConditionFormula>( Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_TC.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_PSM.Account_Long_ID__c )
&amp;&amp; ISPICKVAL( RelationshipType__c , &quot;	Influencer&quot;)</errorConditionFormula>
        <errorMessage>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_CVS_Caremark</fullName>
        <active>true</active>
        <description>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</description>
        <errorConditionFormula>( Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.CVS_Health.Account_Long_ID__c
  || Partner_Contract_Partnership__r.Account_ID_Long__c = $CustomMetadata.Account_Long_ID__mdt.Caremark_TC.Account_Long_ID__c
|| Partner_Contract_Partnership__r.Account_ID_Long__c =  $CustomMetadata.Account_Long_ID__mdt.Caremark_PSM.Account_Long_ID__c )
&amp;&amp; ISPICKVAL( RelationshipType__c , &quot;Lead Source&quot;)</errorConditionFormula>
        <errorMessage>We noticed that you selected Caremark TC, Caremark PSM or CVS Health as the Lead Source.  Please select Caremark instead.</errorMessage>
    </validationRules>
</CustomObject>